# RpiCANprototype

src/: notes.txt
src/CAN_pubsub/: CMakeLists.txt  package.xml
src/CAN_pubsub/src/: CAN_pub.cpp
src/CAN_sub/: CMakeLists.txt  package.xml
src/CAN_sub/include/CAN_sub/: threadsafe_queue.hpp
src/CAN_sub/src/: CAN_sub.cpp  threadsafe_queue.cpp
src/ros2can/: CMakeLists.txt  package.xml
src/ros2can/include/ros2can/: ros2can.hpp
src/ros2can/src/: ros2can.cpp
src/ros2socketCAN/: CMakeLists.txt  package.xml
src/threadsafe_queue/: CMakeLists.txt  package.xml
src/threadsafe_queue/include/threadsafe_queue/: threadsafe_queue.hpp
src/threadsafe_queue/src/: threadsafe_queue.cpp
